--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install",
-    "lint": "npx eslint src test",
+    "lint": "npx eslint src \"**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
-    "prettier": "npx prettier src test --check",
+    "prettier": "npx prettier src \"**/*.{js,jsx,ts,tsx}\" --check",
     "prettier:fix": "npm run prettier -- --write",
     "format": "npm run prettier:fix && npm run lint:fix"
   },
@@ -55,8 +55,7 @@
   "lint-staged":{
     "**/*.{js,jsx,ts,tsx}":[
       "npx prettier --write",
-      "npx eslint --fix",
-			"npm run format"
+      "npx eslint --fix"
     ]
   }
 }
