--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-parallax-tilt": "^1.7.39",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
@@ -52,8 +53,8 @@
     "lint-staged": "^13.0.1",
     "prettier": "2.6.2"
   },
-  "lint-staged":{
-    "**/*.{js,jsx,ts,tsx}":[
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
       "npx prettier --write",
       "npx eslint --fix"
     ]
